# opti-dispatch

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: battery_spec.csv  market1_data.csv  market2_data.csv
scripts/: example_01.py  main.py
scripts/example_results/: LP_cashflow.csv  LP_results.csv  june-dec_MILP_cashflow.csv  june-dec_MILP_results.csv
src/opti-dispatch/: battery.py
src/opti_dispatch/: __init__.py  analysis.py  battery.py  markets.py
src/opti_dispatch/optimisation/: __init__.py  arbitrage_models.py  rules.py
tests/: conftest.py  test_battery.py  test_markets.py  test_models.py
