[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opti-dispatch"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyomo>=6.7",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
solvers = [
    "highspy>=1.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]